# peshbeen

./: 999_peshbeen.html  999_peshbeen.md  README.md  api.html  api.md  examp_core.html  examp_core.html.md  index.html  index.md  install_guide.html  install_guide.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  styles.css  user_guide.html  user_guide.md
.github/workflows/: deploy.yaml  test.yaml
api/: api.html  api.html.md
data/: nhs_attend.xlsx  nhs_calls.xlsx
guide/: 01_model_zoo.html  01_model_zoo.md  02_stationarity_detrending.html  02_stationarity_detrending.md  03_auto_transformation.html  03_auto_transformation.md  04_prob_forecasting.html  04_prob_forecasting.md  05_hyperparameter_tuning.html  05_hyperparameter_tuning.md
modules/: 03_model_selection.html  03_model_selection.md  04_prob_forecast.html  04_prob_forecast.md  08_helpers.html  08_helpers.md  09_helpers.html  09_helpers.md  datasets.html  datasets.html.md  formatting.html  formatting.html.md  metrics.html  metrics.html.md  prob_forecast.html  prob_forecast.html.md  statplots.html  statplots.html.md  stattools.html  stattools.html.md  transformations.html  transformations.html.md
modules/02_models/: 00_index.html  01_ml_forecast.html  01_ml_forecast.md  02_ms_arr.html  02_ms_arr.md  03_ml_mv_forecast.html  03_ml_mv_forecast.md  04_var.html  04_var.md  05_ms_var.html  05_ms_var.md  06_arima.html  06_arima.md  07_ets.html  07_ets.md  08_naive.html  08_naive.md  09_glm.html  09_glm.md  10_direct_ml.html  10_direct_ml.md  90_herne_pesh.html  90_herne_pesh.md
nbs/: 01_metrics.ipynb  02_models.ipynb  03_model_selection.ipynb  04_prob_forecast.ipynb  999_peshbeen.qmd  99_datasets.ipynb  99_examp_core.ipynb  _quarto.yml  api.ipynb  index.ipynb  install_guide.ipynb  nbdev.yml  sidebar.yml  styles.css  user_guide.ipynb
nbs/api/: api.ipynb
nbs/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
nbs/catboost_info/learn/: events.out.tfevents
nbs/guide/: 01_model_zoo.ipynb  02_stationarity_detrending.ipynb  03_auto_transformation.ipynb  04_prob_forecasting.ipynb  05_hyperparameter_tuning.ipynb
nbs/modules/: 01_metrics.ipynb  03_model_selection.ipynb  04_prob_forecast.ipynb  05_transformations.ipynb  06_stattools.ipynb  07_statplots.ipynb  08_formatting.ipynb  09_helpers.ipynb  99_datasets.ipynb
nbs/modules/02_models/: 00_index.ipynb  01_ml_forecast.ipynb  02_ms_arr.ipynb  03_ml_mv_forecast.ipynb  04_var.ipynb  05_ms_var.ipynb  06_arima.ipynb  07_ets.ipynb  08_naive.ipynb  09_glm.ipynb  10_direct_ml.ipynb  90_herne_pesh.ipynb
nbs/modules/02_models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
nbs/modules/02_models/catboost_info/learn/: events.out.tfevents
peshbeen/: _modidx.py  core.py  datasets.py  formatting.py  helpers.py  metrics.py  model_selection.py  models.py  probabilistic_forecasting.py  statsplots.py  statstools.py  transformations.py
peshbeen/data/: wales_admissions.xlsx
peshbeen/models/: __init__.py  arima.py  ets.py  glm.py  ml_direct_forecaster.py  ml_forecaster.py  ml_mv_forecaster.py  ms_arr.py  ms_var.py  naive.py  pesh.py  var.py
site_libs/bootstrap/: bootstrap-8c9e79bb48dd7b9a8ecf62ad4c427352.min.css  bootstrap-959f7053671b41e6e2e3f1df4aa6282d.min.css  bootstrap-d49249c111a68334dedc4ee46f328e8b.min.css
