[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "peshbeen"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mustafa Aslan", email = "mustafaslan63@gmail.com" }]
keywords = ["nbdev"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "nbdev",
    "fastcore",
]

[project.optional-dependencies]
tuning = [
    "hyperopt",
    "optuna",
]

forecast = [
    "statsforecast",
    "window_ops",
    "numba",
]

plotting = [
    "matplotlib",
    "seaborn",
]

tables = [
    "great_tables",
]

ml = [
    "xgboost",
    "lightgbm",
    "catboost",
    "cubist",
]

io = [
    "openpyxl",
]

all = [
    "hyperopt",
    "statsforecast",
    "window_ops",
    "numba",
    "matplotlib",
    "seaborn",
    "great_tables",
    "xgboost",
    "lightgbm",
    "catboost",
    "cubist",
    "openpyxl",
]

[project.urls]
Repository = "https://github.com/mustafaslanCoto/peshbeen"
Documentation = "https://mustafaslanCoto.github.io/peshbeen/"

[project.entry-points.nbdev]
peshbeen = "peshbeen._modidx:d"

[tool.setuptools.dynamic]
version = { attr = "peshbeen.__version__" }

[tool.setuptools.packages.find]
include = ["peshbeen"]

[tool.nbdev]
lib_name = "peshbeen"
repo = "peshbeen"
title = "peshbeen"
description = "Time series forecasting library"
user = "mustafaslanCoto"
branch = "main"
nbs_path = "nbs"
doc_path = "_docs"
recursive = "True"
tst_flags = "notest"
doc_host = "https://mustafaslanCoto.github.io"
doc_baseurl = "/peshbeen"
git_url = "https://github.com/mustafaslanCoto/peshbeen"
lib_path = "peshbeen"
custom_sidebar = "False"