[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "peshbeen"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Mustafa Aslan", email = "mustafaslan63@gmail.com" }]
keywords = ["nbdev"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "statsforecast",
    "numba",
    "setuptools>=68,<82",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "nbdev<3",
    "execnb>=0.1.7,<0.2.0",
    "fastcore",
    "importlib-metadata",
]

tuning = [
    "hyperopt",
    "optuna",
]

plotting = [
    "matplotlib",
    "seaborn",
]

ml = [
    "xgboost",
    "cubist",
    "lightgbm",
    "catboost",
    "feature-engine"
]

all = [
    "hyperopt",
    "optuna",
    "matplotlib",
    "seaborn",
    "great_tables",
    "xgboost",
    "cubist",
    "openpyxl",
    "lightgbm",
    "catboost",
    "feature-engine"
]

[project.urls]
Repository = "https://github.com/mustafaslanCoto/peshbeen"
Documentation = "https://mustafaslanCoto.github.io/peshbeen/"

[project.entry-points.nbdev]
peshbeen = "peshbeen._modidx:d"

[tool.setuptools.dynamic]
version = { attr = "peshbeen.__version__" }

[tool.setuptools.packages.find]
include = ["peshbeen", "peshbeen.*"]

[tool.setuptools.package-data]
peshbeen = ["data/*.xlsx"]

[tool.nbdev]
repo = "peshbeen"
lib_name = "peshbeen"
title = "peshbeen"
user = "mustafaslanCoto"
branch = "main"
description = "Time series forecasting library"
author = "Mustafa Aslan"
author_email = "mustafaslan63@gmail.com"
min_python = "3.10"
doc_path = "_docs"
nbs_path = "nbs"
recursive = true
tst_flags = "notest"
doc_host = "https://mustafaslanCoto.github.io"
doc_baseurl = "/peshbeen"
git_url = "https://github.com/mustafaslanCoto/peshbeen"
lib_path = "peshbeen"
custom_sidebar = false